--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
+    "mongoose": "^7.5.0",
     "socket.io": "^4.7.2"
   }
 }
